SERVER-76826 Fix invariant failure for $merge with dollar fields

(cherry picked from commit f59655be727acb3c33b4183d2d70ceebb96fede2)